--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,10 @@ table {
   border: solid 1px #dbdbdb;
 }
 
+.table td {
+  border: 0px !important;
+}
+
 tr:nth-child(even) {
   background:  rgba(0,104,179,.1) !important;
 }
@@ -92,8 +96,7 @@ a:hover {
 }
 
 .patientData {
-  margin-left: auto;
-  margin-right: auto;
+  margin: auto;
   width: 100%;
 }
 
